# Face-Detector

./: .gitignore  CMakeLists.txt  README.md  setup_cascade_classifier.sh.in  setup_face_detection.sh.in
C++/face_detection/: CMakeLists.txt  README.txt  face_detection.h  register_face_detection.cxx
data/: faces.mp4.sha512
data/image/: face_detection.pipe
face_detection/: CMakeCache.txt  CMakeLists.txt  Makefile  README.txt  cmake_install.cmake  face_detection.cxx  face_detection.h  face_detection.pipe  face_detection_export.h  face_detection_images.txt  face_detection_plugin_export.h  face_detection_video.pipe  register_face_detection.cxx
pipelines/: cascade_classifier_video.pipe  cascade_classifier_video.pipe.in  face_detection_video.pipe  py_cascade_classifier_video.pipe.in
python/: CMakeLists.txt  faceDetection.py  face_detection_python.pipe
python/arrows/: CMakeLists.txt  cascade_classifier.py
src/arrows/: CMakeLists.txt  cascade_classifier.cxx  cascade_classifier.h  face_detection.cxx  register_cascade_classifier.cxx
src/image/: face_detection_images.txt
